# parsac

./: .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  README.md  acpy.py  animate_2d.py  bfgs.py  clear_database.py  core.py  create_database.py  desolver.py  environment.yml  extractpop.py  mysqlinfo.py  plot.py  plotbest.py  pyac.py  pyproject.toml  runbadresult.py  runyears.py  setup.py  showruninfo.py
.github/workflows/: parsac.yml  publish_to_pypi.yml  release.yml  test.yml
acpy/: .gitignore  __init__.py  acpy_license.py  acpy_run.py  autocalibration.py  ensemble.py  license.py  report.py  run.py  sensitivity.py  service.py  service.txt  setup.py
acpy/examples/: idealized.xml  kinneret_wind.xml
acpy/job/: __init__.py  function.py  gotm.py  idealized.py  namelist.py  program.py  shared.py
acpy/license/: __init__.py  license.py  license.txt
acpy/optimize/: bfgs.py  core.py  desolver.py  likelihood.py
acpy/result/: __init__.py  animate_2d.py  plot.py  (+2 more)
admin/: pull_optimize  pull_optimize.bat  push_optimize
client/: DESolver_nopp.py  DESolver_old.py  config.xsd  desolver.py  galileo.py  gotmcontroller.py  namelist.py  optimizer.py  report.py  run.py  setup.py  transport.py
example/: idealized.xml  kinneret_wind.xml
examples/: demo.py  ensemble_gotm.py  optimize_gotm.py  optimize_gotm2.py  sensitivity_gotm.py
need_updates/: clear_database.py  create_database.py  runbadresult.py  runyears.py
parsac/: __init__.py  autocalibration.py  core.py  ensemble.py  parsac_run.py  record.py  report.py  run.py  sensitivity.py  service.py  service.txt  util.py
test/: test_infer.py  test_yaml.py
webserver/: index.wn  settings.php  startrun.php  submit.php
(+32 files in other folders)
